--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
 
   <title>萝卜纸巾情侣版｜3次辨妆小游戏（男友挑战）- GameSurvivors</title>
-  <meta name="description" content="致敬爆火的“萝卜纸巾猫”辨物梗：在《萝卜纸巾情侣版》中你扮演男生，3次机会从两款相似化妆品中选出女朋友要的那一个。答对亲吻奖励，答错榴莲惩罚，最终用1-3颗红心结算默契值。" />
+  <meta name="description" content="致敬爆火的“萝卜纸巾猫”：在《萝卜纸巾情侣版》中你扮演男生，3次机会从两款相似化妆品中选出女朋友要的那一个。答对亲吻奖励，答错榴莲惩罚，最终用1-3颗红心结算默契值。" />
   <meta name="robots" content="index,follow,max-image-preview:large" />
 
   <!-- Canonical URL（请按实际路径调整） -->
