--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
 
-  <title>萝卜纸巾情侣版｜困难模式：只看图辨妆（男友挑战）- GameSurvivors</title>
-  <meta name="description" content="《萝卜纸巾情侣版（暂定）》困难模式上线：女朋友用口语化需求提要求，你只能看化妆品图片做选择。3次机会，答对亲吻奖励，答错榴莲惩罚，红心结算默契值。" />
+  <title>萝卜纸巾猫情侣版｜但男友是那只猫- GameSurvivors</title>
+  <meta name="description" content="《萝卜纸巾猫》情侣版上线~~快发给男友让他帮你选化妆品吧！3次机会，答对亲吻奖励，答错榴莲惩罚，看你能得芳心几许？" />
   <meta name="robots" content="index,follow,max-image-preview:large" />
   <link rel="canonical" href="https://gamesurvivors.com/luobo-zhijin-couple" />
   <meta name="theme-color" content="#0A84FF" />
@@ -37,11 +37,11 @@
   {
     "@context":"https://schema.org",
     "@type":"WebApplication",
-    "name":"萝卜纸巾情侣版（暂定）",
+    "name":"萝卜纸巾猫情侣版｜但男友是那只猫",
     "url":"https://gamesurvivors.com/luobo-zhijin-couple",
     "applicationCategory":"GameApplication",
     "operatingSystem":"Web",
-    "description":"情侣版辨物小游戏：困难模式仅看化妆品图片作答。女友口语化提需求，作答后显示专业解析，3次机会，红心结算默契值。"
+    "description":"《萝卜纸巾猫》情侣版上线~~快发给男友让他帮你选化妆品吧！3次机会，答对亲吻奖励，答错榴莲惩罚，看你能得芳心几许？"
   }
   </script>
 
@@ -68,7 +68,7 @@
     <section id="viewHome" class="rounded-2xl bg-appleCard shadow-apple border border-appleGray p-5 sm:p-6">
       <h2 class="text-lg sm:text-xl font-semibold">开始前</h2>
       <p class="mt-2 text-appleSub leading-relaxed">
-        先选难度，再开始。普通模式更友好；困难模式只看图，且女友提示更口语。
+        先选难度，再开始。
       </p>
 
       <!-- 难度选择 -->
@@ -79,11 +79,9 @@
             普通
           </button>
           <button id="btnDiffHard" class="px-4 py-2 text-sm font-medium bg-appleBg hover:bg-appleBg transition">
-            困难（推荐）
+            困难
           </button>
         </div>
-        <div id="diffHint" class="mt-2 text-sm text-appleSub">
-          困难：选项仅图片呈现；提示更生活化；解析在作答后给出。
         </div>
       </div>
 
@@ -102,9 +100,6 @@
       </div>
 
       <div class="mt-6 rounded-xl border border-appleGray bg-white p-4">
-        <div class="text-sm text-appleSub">小提示</div>
-        <div class="mt-1 font-medium">
-          困难模式里，很多产品“长得很像”。你需要既懂用途，也认得外观。
         </div>
       </div>
     </section>
