--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
       {
         id: "lipstick-vs-lipbalm",
         promptEasy: "她说：『我想要上嘴有点颜色、看起来精神点的那个。』你选？",
-        promptHard: "她说：『我现在嘴巴看着好没气色，你给我拿那个“上嘴立刻像没熬夜”的。』",
+        promptHard: "她说：『我现在嘴巴看着好没气色，你给我拿那个能让我容光焕发的。』",
         a: { name: "润唇膏", img: ASSET_BASE + "lip-balm.webp", desc: "润唇膏以滋润修护为主，颜色通常更淡或无色，更偏护唇用途。" },
         b: { name: "口红", img: ASSET_BASE + "lipstick.webp", desc: "口红显色更强，强调妆效与气色提升，通常比润唇膏更“有妆感”。" },
         correct: "口红"
@@ -361,7 +361,7 @@
       {
         id: "lipgloss-vs-lipoil",
         promptEasy: "她说：『我想要嘴巴亮亮的、像果冻那样的。』你选？",
-        promptHard: "她说：『我要那种一抹就“水光嘟嘟”的，拍照会反光那种。』",
+        promptHard: "她说：『我要那种一抹就“亮晶晶”的，拍照会反光那种。』",
         a: { name: "唇蜜（Lip Gloss）", img: ASSET_BASE + "lip-gloss.webp", desc: "唇蜜更强调镜面光泽与成膜妆效，视觉存在感更强，常用于打造“玻璃唇”。" },
         b: { name: "唇油（Lip Oil）", img: ASSET_BASE + "lip-oil.webp", desc: "唇油更偏滋润养护与轻薄光泽，妆效通常更像“护唇+微光”。" },
         correct: "唇蜜（Lip Gloss）"
@@ -369,7 +369,7 @@
       {
         id: "foundation-vs-bb",
         promptEasy: "她说：『今天要遮得更稳一点、妆看起来更认真。』你选？",
-        promptHard: "她说：『我今天要见人，别让我脸看起来“没睡醒”，给我拿那个更能打的底。』",
+        promptHard: "她说：『我今天要见人，别让我脸看起来“没睡醒”，给我拿那个更能打的。』",
         a: { name: "粉底液", img: ASSET_BASE + "foundation.webp", desc: "粉底液遮瑕/妆效可选范围更广，更适合打造完整、正式的底妆。" },
         b: { name: "BB霜", img: ASSET_BASE + "bb-cream.webp", desc: "BB霜更偏日常快速上脸，遮瑕通常更轻薄，妆效更“懒人友好”。" },
         correct: "粉底液"
